# gr-polaris

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: polarisConfig.cmake
docs/: README.polaris
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: polaris_example.grc  polaris_example.py
grc/: CMakeLists.txt  polaris_polaris_src.xml
include/polaris/: CMakeLists.txt  api.h  polaris_src.h
lib/: CMakeLists.txt  aligned_buffer.cpp  aligned_buffer.h  complex_manager.cpp  complex_manager.h  flex_fft_manager.cpp  flex_fft_manager.h  flex_fft_parser.cpp  flex_fft_parser.h  polaris_src_impl.cc  polaris_src_impl.h  qa_polaris.cc  qa_polaris.h  task.cpp  task.h  test_polaris.cc  udp_listener.cpp  udp_listener.h
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  polaris_swig.i
